<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="397dp"
        android:layout_height="724dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="48dp"
                android:layout_height="38dp"
                android:contentDescription="@android:string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.021"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="71dp"
                android:layout_height="38dp"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="#221E1E"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.512"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textSize="10dp"
                android:textStyle="bold"
                android:textColor="#221E1E"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.512"
                tools:ignore="SpUsage" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="351dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/custom_input"
                android:drawableLeft="@drawable/ic_baseline_contact_phone_24"
                android:drawablePadding="10dp"
                android:gravity="start|fill_vertical"
                android:hint="CPR"
                android:paddingLeft="15dp"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.301"
                tools:ignore="Autofill,HardcodedText,RtlHardcoded,RtlSymmetry,SpUsage,TextFields" />

            <EditText
                android:layout_width="351dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/custom_input"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:gravity="start|fill_vertical"
                android:hint="First Name"
                android:paddingLeft="15dp"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.025"
                tools:ignore="Autofill,HardcodedText,RtlHardcoded,RtlSymmetry,SpUsage,TextFields" />

            <EditText
                android:layout_width="351dp"
                android:layout_height="41dp"
                android:layout_margin="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/custom_input"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:gravity="start|fill_vertical"
                android:hint="Last Name"
                android:paddingLeft="15dp"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.55"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.107"
                tools:ignore="Autofill,HardcodedText,RtlHardcoded,RtlSymmetry,SpUsage,TextFields" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="351dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/custom_input"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="start|fill_vertical"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.397"
                tools:ignore="Autofill,HardcodedText,RtlHardcoded,RtlSymmetry,SpUsage" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="273dp"
                android:layout_height="41dp"
                android:layout_margin="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/custom_input"
                android:drawablePadding="10dp"
                android:gravity="start|fill_vertical"
                android:hint="Last Name"
                android:paddingLeft="15dp"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.833"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.197"
                tools:ignore="Autofill,HardcodedText,RtlHardcoded,RtlSymmetry,SpUsage,TextFields" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="351dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/custom_input"
                android:drawableLeft="@drawable/ic_baseline_lock_24"

                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="start|fill_vertical"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textSize="18dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,HardcodedText,RtlHardcoded,RtlSymmetry,SpUsage" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="212dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="By signing in, you agree to our"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.605"
                tools:ignore="HardcodedText,SpUsage" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="172dp"
                android:layout_height="23dp"
                android:autoLink="all"
                android:clickable="true"
                android:text="@string/hyperlink"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.364"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.645"
                tools:ignore="KeyboardInaccessibleWidget" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="27dp"
                android:layout_height="16dp"
                android:text="&amp;"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.545"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.638"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="109dp"
                android:layout_height="23dp"
                android:autoLink="all"
                android:clickable="true"
                android:text="@string/hyperlink1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.746"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.645"
                tools:ignore="KeyboardInaccessibleWidget" />

            <Button
                android:id="@+id/button"
                android:layout_width="350dp"
                android:layout_height="51dp"
                android:backgroundTint="#FA9604"
                android:text="SIGN UP"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.531"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.763"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="116dp"
                android:layout_height="21dp"
                android:gravity="center"
                android:text="Have an account?"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.405"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.841"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="109dp"
                android:layout_height="23dp"
                android:autoLink="all"
                android:clickable="true"
                android:text="@string/hyperlink2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.791"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.843"
                tools:ignore="KeyboardInaccessibleWidget" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="41dp"
                android:layout_height="42dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.199"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txtview"
                android:layout_width="37dp"
                android:layout_height="40dp"
                android:text="NO"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.175"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.201"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>